Storage Service 로직의 예외 처리 전면 수정 및 StorageApiController의 책임을 비즈니스 로직으로 분리